layout and z-index fixes

--- a/client/src/components/AppFooter.scss
+++ b/client/src/components/AppFooter.scss
@@ -21,6 +21,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    z-index: layouts.$app-footer-stack;
   }
 
   &__button {
