--- a/client/src/components/ExpenseTypeSelector.scss
+++ b/client/src/components/ExpenseTypeSelector.scss
@@ -14,7 +14,7 @@
 
   &__button {
     color: colors.$sakura-blossom;
-    padding: 0.3rem 5rem;
+    padding: 0.2rem 5rem;
 
     &.active {
       background-color: colors.$sakura-blossom;
