--- a/client/src/styles/layouts.scss
+++ b/client/src/styles/layouts.scss
@@ -1,6 +1,7 @@
-$app-header-height: 4rem;
 $app-footer-height: 4rem;
-$expense-form-stack: 100;
-$category-list-stack: 200;
-$category-form-stack: 300;
+$app-footer-stack: 100;
+$app-main-stack: 200;
+$expense-form-stack: 300;
+$category-list-stack: 400;
+$category-form-stack: 500;
 $modal-stack: 1000;
